syntax = "proto3";

package calculator;

option java_package = "com.proto.calculator";
option java_multiple_files = true;

message CalculateRequest {
  int32 first_addend = 1;
  int32 second_addend = 2;
}

message CalculateResponse {
  int32 sum = 1;
}